Fixes search page on small display

--- a/src/components/SearchWeather/SearchWeather.module.scss
+++ b/src/components/SearchWeather/SearchWeather.module.scss
@@ -1,13 +1,37 @@
 
 .searchBox {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 2fr 3fr 2fr;
+    justify-content: start;
     align-items: center;
     width: 100%;
-    height: 100px;
+    height: 80px;
     background-color: rgb(236, 236, 236);
 
+    .centerBox {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .search {
+        grid-row: 1/2;
+        grid-column: 2/3;
+        display: block;
+        height: 40px;
+        width: 100%;
+        border: none;
+        border-top-left-radius: 8px;
+        border-bottom-left-radius: 8px;
+        padding: 0 0 0 15px;
+        font-size: 14px;
+        outline: none;
+    }
+
     .searchButton {
+        grid-row: 1/2;
+        grid-column: 2/3;
+        width: 80px;
         height: 40px;
         border: 0;
         border-top-right-radius: 8px;
@@ -21,17 +45,7 @@
     }
 }
 
-.search {
-    display: block;
-    height: 40px;
-    width: 500px;
-    border: none;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
-    padding: 0 0 0 15px;
-    font-size: 14px;
-    outline: none;
-}
+
 
 .warning {
     display: flex;
@@ -43,10 +57,10 @@
 
 .weatherBox {
     width: 100%;
-    height: calc(100vh - 200px);
+    min-height: calc(100vh - 80px);
     display: flex;
     justify-content: center;
-    align-items: center;
+    padding-top: 40px;
 
     .weatherContent {
         display: flex;
@@ -112,20 +126,12 @@
 }
 
 .back {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    height: 100px;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    font-weight: 500;
-    background-color: rgb(236, 236, 236);
+    margin-left: 30px;
 
     .backLink {
         text-decoration: none;
         color: #000;
+        font-size: 18px;
+        font-weight: 600;
     }
 }
